tests/paczka1/fuzzy1/91232811.err
Error in line 3: uHN81F7 S646 72,4
Error in line 12: daTVx S346 100,0
Error in line 18: daTVx A431 81,2
Error in line 17: A3IRZDoqWdb S646 94,9
Error in line 38: A3IRZDoqWdb A844 -1,3
